[package]
name = "wallbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "*"
clap = { version = "*", features = ["derive"] }
flate2 = "*"
toml = "*"
modbus = "*"

serde = "*"
serde_derive = "*"
serde_json = "*"
