[package]
name = "wallbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "*"
chrono = "*"
clap = { version = "*", features = ["derive"] }
fern = "*"
flate2 = "*"
log = "*"
regex = "*"
toml = "*"
modbus = "*"
rusqlite = { version = "*", features = ["bundled-sqlcipher"] }

serde = "*"
serde_derive = "*"
serde_json = "*"
